<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- 1) 화면 정확한 정중앙에 오는 이미지 -->
    <ImageView
        android:id="@+id/main_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/homeimage"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"/>   <!-- ← 0.5 = 완전 중앙 -->

    <!-- 2) 설명 텍스트 : 이미지 바로 아래에 붙음 -->
    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackbox_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/main_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- 3) 블루투스 등록 버튼 -->
    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_register"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/homebtn_background"
        android:backgroundTint="@null"
        android:text="@string/bluetooth_register"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:contentDescription="@null"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <!-- 4) 소켓 등록 버튼 -->
    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_socket_register"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/homebtn_background"
        android:backgroundTint="@null"
        android:text="@string/socket_register"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:contentDescription="@null"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
