<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parking_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_today_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rViewToday"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:background="#000000"
        android:contentDescription="@string/event_description"
        app:layout_constraintTop_toBottomOf="@+id/textViewToday"
        app:layout_constraintBottom_toTopOf="@+id/guideline_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="8dp"
        app:layout_constraintHeight_min="30dp"

        />

    <TextView
        android:id="@+id/textViewPast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_past_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_50"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rViewPast"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#000000"
        app:layout_constraintHeight_min="120dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:contentDescription="@string/event_description"

        app:layout_constraintTop_toBottomOf="@+id/textViewPast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>