<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Fragment or Content View -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/custom_bottom_bar" />

    <!-- 커스텀 바 -->
    <LinearLayout
        android:id="@+id/custom_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_nav_background"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/main_home"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/label_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_home"
                android:textSize="12sp"
                android:textColor="#888888" />

        </LinearLayout>

        <!-- Events -->
        <LinearLayout
            android:id="@+id/nav_events"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_events"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/event_page"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/label_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_events"
                android:textSize="12sp"
                android:textColor="#888888" />

        </LinearLayout>

        <!-- MyPage -->
        <LinearLayout
            android:id="@+id/nav_mypage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_mypage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/my_page"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/label_mypage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_mypage"
                android:textSize="12sp"
                android:textColor="#888888" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>