<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- 10 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/event_guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <!-- 1 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/event_guideline100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        />

    <!-- Text -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/eventpage_topText"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_guideline10" />


    <!-- 검색창 -->
    <EditText
        android:id="@+id/event_searchBar"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/event_search_hint"
        android:autofillHints="search"
        android:textColorHint="#888888"
        android:inputType="text"
        android:background="@drawable/search_edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />
    <!-- (주차시 / 주행시 ) -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tab_event_description"
        app:tabTextColor="#AAAAAA"
        app:tabIndicatorFullWidth="true"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabIndicatorColor="#448AFF"
        app:tabIndicatorHeight="6dp"
        app:layout_constraintTop_toBottomOf="@+id/event_searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabTextAppearance="@style/CustomTabText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- 탭 전환 -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintBottom_toBottomOf="@id/event_guideline100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:clipToPadding="false"
        android:clipChildren="false"

        android:overScrollMode="never"
        />


</androidx.constraintlayout.widget.ConstraintLayout>